--- a/app/components/home/home.css
+++ b/app/components/home/home.css
@@ -1,11 +1,11 @@
-﻿.slide.image {
-	width: 100%;
+.slide-image {
+    width: 100%;
 }
 
 .carousel-holder {
-	margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 .carousel-control,.item {
-	border-radius: 4px;
+    border-radius: 4px;
 }
